Allow recipe to be removed from meal plan
