# webapp/src/lib/api/mealplan/mealplan.svelte.ts
@@ -27,3 +27,20 @@ export const createMealPlan = async (recipeId: number, date: string) => {
     }
     return response.data
 }
+
+export const deleteMealPlan = async (recipeId: number, date: string) => {
+    const response = await client.DELETE("/mealplan/{recipeId}", {
+        params: {
+            path: {
+                recipeId
+            },
+            query: {
+                date
+            }
+        }
+    })
+    if (response.error) {
+        throw response.error
+    }
+    return response.data
+}
